--- a/bittytax/templates/price_data.html
+++ b/bittytax/templates/price_data.html
@@ -2,34 +2,33 @@
 <h2>Price Data - {{config.format_tax_year(tax_year)}}</h2>
 <table repeat="1" width="100%">
     <tr>
-        <th align="left">Asset</th>
-        <th align="left">Data Source</th>
+        <th align="left">Base Asset</th>
         <th align="left">Date</th>
-        <th align="right">Price ({{config.ccy}})</th>
-        <th align="right">Price (BTC)</th>
+        <th align="left">Data Source</th>
+        <th align="left">via</th>
+        <th align="right">Price</th>
     </tr>
-    {% for asset in price_report[tax_year]|sort %}
-        {% for date in price_report[tax_year][asset]|sort %}
-            {% if price_report[tax_year][asset][date]['price_ccy'] != none %}
+    {% for date in price_report[tax_year]|sort %}
+        {% for pair in price_report[tax_year][date]|sort %}
+            {% if price_report[tax_year][date][pair]['price'] != none %}
                 <tr>
-                    <td>1 {{asset}} ({{price_report[tax_year][asset][date]['name']|nowrapfilter}})</td>
-                    <td><a href="{{price_report[tax_year][asset][date]['url']}}">{{price_report[tax_year][asset][date]['data_source']}}</a></td>
+                    <td>1 {{price_report[tax_year][date][pair]['symbol']}} ({{price_report[tax_year][date][pair]['name']|nowrapfilter}})</td>
                     <td>{{date|datefilter}}</td>
-                    <td align="right">{{price_report[tax_year][asset][date]['price_ccy']|valuefilter}}</td>
-                    {% if price_report[tax_year][asset][date]['price_btc'] != none %} 
-                        <td align="right">{{price_report[tax_year][asset][date]['price_btc']|quantityfilter}}</td>
-                    {% else %} 
-                        <td align="right">n/a</td>
-                    {% endif %}
+                    <td><a href="{{price_report[tax_year][date][pair]['url']}}">{{price_report[tax_year][date][pair]['data_source']}}</a></td>
+                    <td>{{price_report[tax_year][date][pair]['path']|join(',')|default('n/a', true)}}</td>
+                    <td align="right">
+                        {{price_report[tax_year][date][pair]['price']|pricefilter(price_report[tax_year][date][pair]['quote_asset'])}}
+                        {{price_report[tax_year][date][pair]['quote_asset']|nowrapfilter}}
+                    </td>
                 </tr>
             {% else %} 
                 {% set price_missing.flag = true %}
                 <tr>
-                    <td>1 {{asset}}</td>
-                    <td></td>
+                    <td>1 {{price_report[tax_year][date][pair]['symbol']}}</td>
                     <td>{{date|datefilter}}</td>
-                    <td align="right"><i>Not available*</i></td>
                     <td></td>
+                    <td></td>
+                    <td align="right"><i>Not available*</i></td>
                 </tr>
             {% endif %}
         {% endfor %}
