--- a/bittytax/templates/tax_report.html
+++ b/bittytax/templates/tax_report.html
@@ -36,6 +36,10 @@
             h1 {
                 text-decoration: underline;
             }
+            td {
+                -pdf-word-wrap: CJK;
+                vertical-align: top;
+            }
         </style>
     </head>
     <body>
